# vIR-OLO

./: .gitignore  INTEGRATION_GUIDE.md  README.md  main.py  pyproject.toml
Test_project/: config.json.bak  dataset.yaml
src/: FORREFERENCE_imageAnnotator.py  constants.py  spectrai.py
src/models/: predict.py
src/tools/: donwload_default_models.py  image_loader.py
src/ui/: bounding_box.py  box_manager.py  canvas_widget.py  depr_main_ui.py  label_edit.py  label_edit.ui  main.ui  main_ui.py
